feat: only account owner and administrator can get and edit user data
